some initial data binding

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p class="placeholder">Home page content comes here...</p>
+<p class="placeholder">List of holidays</p>
+<button class="btn btn-primary">Add a Holiday</button>
+<ul>
+  <li>
+    <strong>Lulworth Cove</strong> - 22 May 2025
+  </li>
+  <li>
+    <strong>Cotswold</strong> - 10 Mar 2025
+  </li>
+</ul>
