--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <hol-banner></hol-banner>
 <main class="main">
   <div class="content">
-    <hol-home></hol-home>
+    <!-- <hol-home></hol-home> -->
+     <hol-expense-day></hol-expense-day>
   </div>
 </main>
 
