Some more cool templating and a list of past holidays

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <hol-banner></hol-banner>
 <main class="main">
   <div class="content">
-    <!-- <hol-home></hol-home> -->
-     <hol-expense-day></hol-expense-day>
+    <hol-home></hol-home>
+     <!-- <hol-expense-day></hol-expense-day> -->
   </div>
 </main>
 
