--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,3 +7,40 @@ p.placeholder {
   vertical-align: middle;
   margin-top: 20px;
 }
+
+div.holiday-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+li.holiday-item {
+  list-style: none;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+div.holiday-details {
+  margin-left: 10px;
+}
+
+img {
+  border-radius: 10%;
+  width: 75px;
+  height: 75px;
+}
+
+h1 {
+  color: #6a2faa;
+  font-size: 1.5em;
+  text-align: left;
+  padding: 1px;
+  margin: 0%;
+}
+
+.holiday-date {
+  color: #6a2faa;
+  font-weight:lighter;
+  font-size: 0.6em;
+}
