--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,16 @@
 <p class="placeholder">List of holidays</p>
 <button class="btn btn-primary">Add a Holiday</button>
 <ul>
-  <li>
-    <strong>Lulworth Cove</strong> - 22 May 2025
-  </li>
-  <li>
-    <strong>Cotswold</strong> - 10 Mar 2025
+  <li class="holiday-item" *ngFor="let holiday of holidays">
+    <div class="holiday-item">
+      <img [src]="generateLogoUrl(holiday)" [alt]="holiday.title" />
+      <div class="holiday-details">
+        <h1>{{holiday.title}}</h1>
+        <div>
+          <p class="holiday-date">{{holiday.date | date: 'dd MMM yyyy'}}</p>
+          <p class="holiday-description">{{holiday.description}}</p>
+        </div>
+      </div>
+    </div>
   </li>
 </ul>
