add random holidays

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <p class="placeholder">List of holidays</p>
-<button class="btn btn-primary">Add a Holiday</button>
+<button class="btn btn-primary" (click)="addRandomHoliday()">Add a Holiday</button>
 <ul>
   <li class="holiday-item" *ngFor="let holiday of holidays">
     <div class="holiday-item">
