--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,22 +2,6 @@
 <button class="btn btn-primary" (click)="addRandomHoliday()">Add a Holiday</button>
 <ul>
   <li class="holiday-item" *ngFor="let holiday of holidays">
-    <div class="holiday-item">
-      <img [src]="generateLogoUrl(holiday)" [alt]="holiday.title" />
-      <div class="holiday-details">
-        <h1>{{holiday.title}}</h1>
-        <div>
-          <p>
-            <span 
-              [ngStyle]="getStyleForDate(holiday)"
-              class="holiday-date" [ngClass]="getClassForDate(holiday)">
-                {{holiday.date | date: 'dd MMM yyyy'}}
-            </span>
-            <span class="holiday-future" *ngIf="isHolidayInFuture(holiday)">[Needs planning]</span>
-          </p>
-          <p class="holiday-description">{{holiday.description}}</p>
-        </div>
-      </div>
-    </div>
+    <hol-holiday-item [holidayItem]="holiday"></hol-holiday-item>
   </li>
 </ul>
