--- a/src/app/holiday-item/holiday-item.component.html
+++ b/src/app/holiday-item/holiday-item.component.html
@@ -1,17 +1,19 @@
 <div class="holiday-item">
     <img [src]="generateLogoUrl(holidayItem)" [alt]="holidayItem.title" />
     <div class="holiday-details">
-    <h1>{{holidayItem.title}}</h1>
-    <div>
-        <p>
-        <span 
-            [ngStyle]="getStyleForDate(holidayItem)"
-            class="holiday-date" [ngClass]="getClassForDate(holidayItem)">
-            {{holidayItem.date | date: 'dd MMM yyyy'}}
-        </span>
-        <span class="holiday-future" *ngIf="isHolidayInFuture(holidayItem)">[Needs planning]</span>
-        </p>
-        <p class="holiday-description">{{holidayItem.description}}</p>
-    </div>
+        <h1>{{holidayItem.title}}</h1>
+        <div>
+            <p>
+                <span [ngStyle]="getStyleForDate(holidayItem)" class="holiday-date"
+                    [ngClass]="getClassForDate(holidayItem)">
+                    {{holidayItem.date | date: 'dd MMM yyyy'}}
+                </span>
+                <span class="holiday-future" *ngIf="isHolidayInFuture(holidayItem)">[Needs planning]</span>
+            </p>
+            <p class="holiday-description">{{holidayItem.description}}</p>
+            <div class="holiday-actions d-flex justify-content-between">
+                <button class="btn btn-danger" (click)="onHolidayDelete()">Delete</button>
+            </div>
+        </div>
     </div>
 </div>
