--- a/src/app/holiday-item/holiday-item.component.css
+++ b/src/app/holiday-item/holiday-item.component.css
@@ -43,3 +43,12 @@ h1 {
   border-radius: 5px;
 }
 
+.btn.btn-danger {
+  margin-left: 10px;
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
