add some basic routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <hol-banner></hol-banner>
 <main class="main">
   <div class="content">
-    <hol-home></hol-home>
-     <!-- <hol-expense-day></hol-expense-day> -->
+    <router-outlet></router-outlet>
   </div>
 </main>
-
-<router-outlet />
