--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,5 +1,8 @@
 <div class="banner">
-    <img src="images/holex-logo-1.jpg" alt="Logo" class="title logo">
+    <img src="images/holex-logo-1.jpg" 
+        alt="Logo"
+        class="title logo"
+        routerLink="/home" />
     <h1 class="title">{{ title }}</h1>
     <p class="sub-title">{{subTitle}}</p>
 </div>
